Add profile modal and integrate with navbar for profile updates

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -27,6 +27,12 @@
 					</a>
 				</li>
 			</ul>
+
+			<ul class="navbar-nav ms-auto">
+				<button type="button" class="btn btn-primary" id="profileBtn">
+					Profile
+				</button>
+			</ul>
 		</div>
 	</div>
 </nav>
