Filter the courses by current study year and semester of student

--- a/src/main/resources/templates/course/index.html
+++ b/src/main/resources/templates/course/index.html
@@ -3,7 +3,7 @@
     xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" 
     layout:decorate="~{layout.html}">
 <section layout:fragment="content">
-    <h1 class="py-2" th:text="'Current Courses'"></h1>
+    <h1 class="py-2" th:text="'Current Courses (Y' + ${currentYear} + 'S' + ${currentSemester} + ')'"></h1>
 
     <!-- Course Table -->
     <div th:replace="~{fragments/course-table :: courseTable(
