fix: make description input field required in schedule form

--- a/src/main/resources/templates/fragments/schedule-form.html
+++ b/src/main/resources/templates/fragments/schedule-form.html
@@ -72,7 +72,7 @@
 		<!-- Description -->
 		<div class="mb-3">
 			<label for="description" class="form-label fw-bold">Description</label>
-			<input class="form-control" th:field="*{description}" list="common-description" autocomplete="off">
+			<input class="form-control" th:field="*{description}" list="common-description" autocomplete="off" required>
 			<datalist id="common-description">
 				<option value="Group Assignment">
 				<option value="Due Date">
