--- a/src/main/resources/templates/fragments/profile-modal.html
+++ b/src/main/resources/templates/fragments/profile-modal.html
@@ -72,13 +72,13 @@
                     <!-- Enrollment Date -->
                     <div class="mb-3">
                         <label for="enrollmentDate" class="form-label fw-bold">Enrollment Date</label>
-                        <input type="date" class="form-control" th:field="*{enrollmentDate}">
+                        <input type="date" class="form-control" th:field="*{enrollmentDate}" onfocus="this.showPicker()">
                     </div>
 
                     <!-- Graduation Date -->
                     <div class="mb-3">
                         <label for="graduationDate" class="form-label fw-bold">Graduation Date</label>
-                        <input type="date" class="form-control" th:field="*{graduationDate}">
+                        <input type="date" class="form-control" th:field="*{graduationDate}" onfocus="this.showPicker()">
                     </div>
 
                     <!-- Current Year -->
